--- a/Pear/Controllers/Landing Screen/Landing Screen/Landing Screen Pages/LandingScreenPage1ViewController.storyboard
+++ b/Pear/Controllers/Landing Screen/Landing Screen/Landing Screen Pages/LandingScreenPage1ViewController.storyboard
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="J3e-uJ-YiO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="J3e-uJ-YiO">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="FredokaOne-Regular.ttf">
-            <string>FredokaOne-Regular</string>
-        </array>
-        <array key="SF-Pro-Display-Regular.otf">
-            <string>SFProDisplay-Regular</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Landing Screen Page1 View Controller-->
         <scene sceneID="bDY-c9-jer">
@@ -29,60 +21,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-background-1" translatesAutoresizingMaskIntoConstraints="NO" id="Uel-tP-PyV">
-                                <rect key="frame" x="0.0" y="-20" width="375" height="250"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="Uel-tP-PyV" secondAttribute="height" multiplier="3:2" id="nAK-Vh-f8a"/>
-                                </constraints>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-1" translatesAutoresizingMaskIntoConstraints="NO" id="8Fv-F1-0B9">
                                 <rect key="frame" x="80" y="10" width="215" height="220"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="220" id="kRB-5c-GHa"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Celebrate your friends" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wu5-s9-pQ9">
-                                <rect key="frame" x="40" y="290" width="295" height="26.5"/>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
-                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9YR-vP-jmA">
-                                <rect key="frame" x="40" y="238" width="295" height="44"/>
-                                <fontDescription key="fontDescription" name="FredokaOne-Regular" family="Fredoka One" pointSize="36"/>
-                                <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="kerning">
-                                        <real key="value" value="3"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-background-1" translatesAutoresizingMaskIntoConstraints="NO" id="Yn7-72-0nP">
+                                <rect key="frame" x="16" y="230" width="343" height="170"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Yn7-72-0nP" secondAttribute="height" multiplier="2.02" id="zEK-4T-nal"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="9YR-vP-jmA" firstAttribute="centerX" secondItem="wu5-s9-pQ9" secondAttribute="centerX" id="IcW-HQ-orU"/>
-                            <constraint firstAttribute="trailing" secondItem="wu5-s9-pQ9" secondAttribute="trailing" constant="40" id="KMi-RZ-Lfe"/>
+                            <constraint firstItem="Yn7-72-0nP" firstAttribute="centerX" secondItem="EIo-i5-mA9" secondAttribute="centerX" id="AqI-3m-pH4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Yn7-72-0nP" secondAttribute="trailing" id="Cmh-5a-iVj"/>
                             <constraint firstItem="8Fv-F1-0B9" firstAttribute="leading" secondItem="EIo-i5-mA9" secondAttribute="leading" constant="80" id="LoT-Od-1ov"/>
+                            <constraint firstItem="Yn7-72-0nP" firstAttribute="top" secondItem="8Fv-F1-0B9" secondAttribute="bottom" id="OtZ-0j-fmb"/>
                             <constraint firstItem="8Fv-F1-0B9" firstAttribute="centerY" secondItem="EIo-i5-mA9" secondAttribute="centerY" constant="-80" id="WbZ-CO-tzJ"/>
-                            <constraint firstItem="Uel-tP-PyV" firstAttribute="width" secondItem="EIo-i5-mA9" secondAttribute="width" id="Wo8-9a-Rs2"/>
-                            <constraint firstItem="Uel-tP-PyV" firstAttribute="bottom" secondItem="8Fv-F1-0B9" secondAttribute="bottom" id="Wx5-7j-v0d"/>
                             <constraint firstItem="8Fv-F1-0B9" firstAttribute="centerX" secondItem="EIo-i5-mA9" secondAttribute="centerX" id="X7C-7J-tlp"/>
-                            <constraint firstItem="wu5-s9-pQ9" firstAttribute="top" secondItem="9YR-vP-jmA" secondAttribute="bottom" constant="8" id="cYU-MZ-ip2"/>
-                            <constraint firstItem="Uel-tP-PyV" firstAttribute="centerX" secondItem="EIo-i5-mA9" secondAttribute="centerX" id="f6F-aP-CHc"/>
-                            <constraint firstItem="9YR-vP-jmA" firstAttribute="top" secondItem="8Fv-F1-0B9" secondAttribute="bottom" constant="8" id="gpF-DK-aip"/>
                             <constraint firstAttribute="trailing" secondItem="8Fv-F1-0B9" secondAttribute="trailing" constant="80" id="hi2-Xi-lg3"/>
-                            <constraint firstItem="wu5-s9-pQ9" firstAttribute="centerX" secondItem="EIo-i5-mA9" secondAttribute="centerX" id="kmt-1P-IRj"/>
-                            <constraint firstItem="9YR-vP-jmA" firstAttribute="width" secondItem="wu5-s9-pQ9" secondAttribute="width" id="lUF-Ei-eEB"/>
-                            <constraint firstItem="wu5-s9-pQ9" firstAttribute="leading" secondItem="EIo-i5-mA9" secondAttribute="leading" constant="40" id="pjb-dN-3LT"/>
+                            <constraint firstItem="Yn7-72-0nP" firstAttribute="leading" secondItem="EIo-i5-mA9" secondAttribute="leadingMargin" id="sZE-Ba-K6f"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="375" height="400"/>
                     <connections>
-                        <outlet property="backgroundImageView" destination="Uel-tP-PyV" id="vAh-JX-H8z"/>
                         <outlet property="imageView" destination="8Fv-F1-0B9" id="rrc-AE-Lut"/>
-                        <outlet property="subtitleLabel" destination="wu5-s9-pQ9" id="nkJ-ya-aaY"/>
-                        <outlet property="titleLabel" destination="9YR-vP-jmA" id="UZY-p0-K61"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kc8-rY-mus" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -91,7 +57,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="landing-pear-1" width="220" height="220"/>
-        <image name="landing-pear-background-1" width="375" height="250"/>
+        <image name="landing-pear-1" width="880" height="880"/>
+        <image name="landing-pear-background-1" width="1352" height="668"/>
     </resources>
 </document>
