--- a/Pear/Controllers/Landing Screen/Landing Screen/Landing Screen Pages/LandingScreenPage2ViewController.storyboard
+++ b/Pear/Controllers/Landing Screen/Landing Screen/Landing Screen Pages/LandingScreenPage2ViewController.storyboard
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="J9S-Kb-9hC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="J9S-Kb-9hC">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="FredokaOne-Regular.ttf">
-            <string>FredokaOne-Regular</string>
-        </array>
         <array key="SF-Pro-Display-Regular.otf">
             <string>SFProDisplay-Regular</string>
         </array>
@@ -30,13 +27,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-background-2" translatesAutoresizingMaskIntoConstraints="NO" id="F06-kP-JWE">
-                                <rect key="frame" x="0.0" y="-20" width="375" height="250"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="F06-kP-JWE" secondAttribute="height" multiplier="3:2" id="S8H-7y-y9A"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="landing-pear-2" translatesAutoresizingMaskIntoConstraints="NO" id="a6m-dr-QZx">
-                                <rect key="frame" x="80" y="10" width="215" height="220"/>
+                                <rect key="frame" x="80" y="50" width="215" height="220"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="220" id="heb-mE-zU0"/>
                                 </constraints>
@@ -47,34 +44,20 @@
                                 <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PEAR" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vVC-Yx-AjV">
-                                <rect key="frame" x="40" y="238" width="295" height="44"/>
-                                <fontDescription key="fontDescription" name="FredokaOne-Regular" family="Fredoka One" pointSize="36"/>
-                                <color key="textColor" red="0.26666666666666666" green="0.29411764705882354" blue="0.32941176470588235" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="kerning">
-                                        <real key="value" value="3"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="a6m-dr-QZx" firstAttribute="centerX" secondItem="IGf-xm-3eN" secondAttribute="centerX" id="1S3-IU-feW"/>
                             <constraint firstItem="F06-kP-JWE" firstAttribute="bottom" secondItem="a6m-dr-QZx" secondAttribute="bottom" id="H42-SA-oGE"/>
                             <constraint firstAttribute="trailing" secondItem="dZ6-4J-Vnb" secondAttribute="trailing" constant="40" id="SeQ-mg-aez"/>
-                            <constraint firstItem="a6m-dr-QZx" firstAttribute="centerY" secondItem="IGf-xm-3eN" secondAttribute="centerY" constant="-80" id="VPe-nH-Dh1"/>
+                            <constraint firstItem="a6m-dr-QZx" firstAttribute="centerY" secondItem="IGf-xm-3eN" secondAttribute="centerY" constant="-40" id="VPe-nH-Dh1"/>
                             <constraint firstItem="a6m-dr-QZx" firstAttribute="leading" secondItem="IGf-xm-3eN" secondAttribute="leading" constant="80" id="XVu-w5-UA3"/>
-                            <constraint firstItem="vVC-Yx-AjV" firstAttribute="top" secondItem="a6m-dr-QZx" secondAttribute="bottom" constant="8" id="Zy3-Ma-h6S"/>
-                            <constraint firstItem="vVC-Yx-AjV" firstAttribute="width" secondItem="dZ6-4J-Vnb" secondAttribute="width" id="gjF-B4-W0i"/>
                             <constraint firstItem="dZ6-4J-Vnb" firstAttribute="centerX" secondItem="IGf-xm-3eN" secondAttribute="centerX" id="hwL-Rg-H6b"/>
                             <constraint firstAttribute="trailing" secondItem="a6m-dr-QZx" secondAttribute="trailing" constant="80" id="jVp-pJ-9br"/>
-                            <constraint firstItem="vVC-Yx-AjV" firstAttribute="centerX" secondItem="dZ6-4J-Vnb" secondAttribute="centerX" id="k21-ko-9GK"/>
-                            <constraint firstItem="dZ6-4J-Vnb" firstAttribute="top" secondItem="vVC-Yx-AjV" secondAttribute="bottom" constant="8" id="nHv-oW-gjm"/>
                             <constraint firstItem="F06-kP-JWE" firstAttribute="width" secondItem="IGf-xm-3eN" secondAttribute="width" id="nqR-nV-nRT"/>
                             <constraint firstItem="F06-kP-JWE" firstAttribute="centerX" secondItem="IGf-xm-3eN" secondAttribute="centerX" id="zWX-M1-yob"/>
                             <constraint firstItem="dZ6-4J-Vnb" firstAttribute="leading" secondItem="IGf-xm-3eN" secondAttribute="leading" constant="40" id="zuP-PN-LJj"/>
+                            <constraint firstItem="dZ6-4J-Vnb" firstAttribute="top" secondItem="F06-kP-JWE" secondAttribute="bottom" constant="20" id="zvN-O9-B9y"/>
                         </constraints>
                     </view>
                     <size key="freeformSize" width="375" height="400"/>
@@ -82,7 +65,6 @@
                         <outlet property="backgroundImageView" destination="F06-kP-JWE" id="UNq-Rp-MQS"/>
                         <outlet property="imageView" destination="a6m-dr-QZx" id="yhU-c1-Zqq"/>
                         <outlet property="subtitleLabel" destination="dZ6-4J-Vnb" id="Sqk-aa-nRK"/>
-                        <outlet property="titleLabel" destination="vVC-Yx-AjV" id="2ke-up-gzP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AvO-JN-m8t" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -91,7 +73,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="landing-pear-2" width="220" height="220"/>
-        <image name="landing-pear-background-2" width="375" height="250"/>
+        <image name="landing-pear-2" width="880" height="880"/>
+        <image name="landing-pear-background-2" width="1875" height="1250"/>
     </resources>
 </document>
